# stock-valuation-insider-signals

./: .gitignore  .mcpbignore  MACHINE-INSTALL.md  README.md  manifest.json  pyproject.toml
.github/workflows/: monthly-snapshot.yml
scripts/: bootstrap.sh  install.sh  start.sh
